traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:23: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur==true) {return true}
    ^Snake:27: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur==true) {return true}
    ^